# fastapi-template

./: .env  .example.env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  alembic.ini  cookiecutter.json  docker-compose.yml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: ci.yml  pre-commit.yml  project_generation.yml
docker/: Dockerfile  boilerplate.env  db.env  entrypoint.sh
make/: ci.mk  clean.mk  common.mk  format.mk  help.mk  install.mk  lint.mk  run.mk  test.mk
migrations/: __init__.py  env.py  helper.py  script.py.mako
migrations/versions/: 2d1946f92088_added_users_table.py
migrations/versions/added_users/: downgrade.sql  upgrade.sql
scripts/: requirements_parser.py
src/chessdb_api/: __init__.py  asgi.py
src/chessdb_api/models/: __init__.py  users.py
src/chessdb_api/routes/users/: __init__.py
src/chessdb_api/schemas/: __init__.py
src/fastapi_template/: __init__.py  app.py  asgi.py  config.py
src/fastapi_template/core/: __init__.py  config_loader.py  db.py  exceptions.py  security.py  service_factory.py  version.py
src/fastapi_template/domain/: base_schemas.py
src/fastapi_template/domain/users/: user_model.py  user_queries.py  user_schemas.py  user_services.py
src/fastapi_template/models/: __init__.py  base.py  users.py
src/fastapi_template/routers/: __init__.py  users.py
src/fastapi_template/routes/users/: __init__.py
src/fastapi_template/schemas/: __init__.py  base.py  user.py
src/wert_api/: __init__.py  asgi.py  version.py
src/wert_api/models/: __init__.py  users.py
src/wert_api/routes/: users.py
src/wert_api/routes/users/: __init__.py
src/wert_api/schemas/: __init__.py  user.py
tests/: __init__.py  conftest.py  test_security.py  test_users.py  utils.py
tests/integration_tests/: __init__.py
tests/integration_tests/test_app/: test_basic_positive.py
tests/system_tests/: __init__.py
tests/test_users/: __init__.py  test_basic_positive.py
tests/unit_tests/: __init__.py
{{cookiecutter.repo_name}}/: .dockerignore  .editorconfig  .gitignore  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.github/workflows/: docker-build.yml  docker-push.yml  docker.yml  lint.yml  package.yml  tests.yml
{{cookiecutter.repo_name}}/docker/: Dockerfile
{{cookiecutter.repo_name}}/make/: ci.mk  clean.mk  common.mk  help.mk  install.mk  lint.mk  run.mk  test.mk
{{cookiecutter.repo_name}}/tests/unit_tests/: conftest.py
{{cookiecutter.repo_name}}/{{cookiecutter.src_dir}}/{{cookiecutter.package_name}}/: api.py  asgi.py
{{cookiecutter.repo_name}}/{{cookiecutter.src_dir}}/{{cookiecutter.package_name}}/core/: config.py  service_container.py
