[metadata]
name = fastapi_template
url = https://github.com/nymann/fastapi-template
maintainer = Kristian Nymann
maintainer_email = kristian@nymann.dev
description = REST API for fastapi_template
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.8
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-dotenv
    pytest-cov
    pytest-xdist
    requests
    pytz
install_requires =
    gunicorn
    fastapi
    gino[starlette]
    uvloop
    httptools
    sqlalchemy-utils
    pydantic
    alembic
    uvicorn
    sentry_sdk
    psycopg2-binary
    python-dotenv
    python-jose


[options.extras_require]
dev =
    isort
    wemake-python-styleguide
    mypy
    dlint
    nitpick
    cohesion
    pyformat
    add-trailing-comma
    pre-commit

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"


[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts =
    --cov-report=xml
    --cov-report=html
    --cov=src
    --cov-report=term-missing

[coverage:run]
branch = True
source =
    src
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest

[flake8]
format = wemake
show-source = True
exclude =
    src/fastapi_template/core/version.py
    tests/utils.py
    migrations/env.py
ignore = D107,D202,D203,D401,E203,E402,E501,W503
inline-quotes = double
max-line-length = 120

[mypy-tests.*]
ignore_errors = True

[mypy]
follow_imports = skip
ignore_missing_imports = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True

[isort]
lexicographical = True
force_sort_within_sections = True
force_single_line = True
src_paths=src,tests
single_line_exclusions = typing
known_first_party = fastapi_template,tests
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 120
multi_line_output = 3
skip = .tox,build
