[metadata]
name = {{cookiecutter.package_name}}
url = {{cookiecutter.git_url}}
maintainer = {{cookiecutter.author_name}}
maintainer_email = {{cookiecutter.author_email}}
description = {{cookiecutter.project_name}}
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = {{cookiecutter.src_dir}}
python_requires = >= 3.10
setup_requires =
    pytest-runner
install_requires =
    fastapi >= 0.85,<1.0.0
    pydantic-settings >= 2.0.0,<3.0.0
    pogo_api >= 0.0.2

[options.extras_require]
all =
    %(dev)s
    %(tests)s
dev =
    add-trailing-comma
    black
    isort
    mypy
    nitpick
    wemake-python-styleguide
    uvicorn
tests =
    python-dotenv
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio
package =
    twine
    wheel

[options.packages.find]
where = {{cookiecutter.src_dir}}

[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}} = {{cookiecutter.package_name}}.main:app


[tool:pytest]
testpaths = tests
addopts =
    --color=yes
    --cov-report=xml
    --cov-report=html
    --cov={{cookiecutter.src_dir}}
    --cov-report=term-missing

[coverage:run]
branch = true
omit = {{cookiecutter.src_dir}}/{{cookiecutter.package_name}}/version.py
source =
    {{cookiecutter.src_dir}}
    tests

[coverage:paths]
source =
    {{cookiecutter.src_dir}}

[aliases]
test=pytest

[pydocstyle]
convention=google

[flake8]
docstring-style = google
format = wemake
ignore = WPS305,D100,D101,D102,D103,D104,D105,D106,D107,H601,WPS306
max-complexity = 6
max-line-length = 120
show-source = True
strictness = long
inline-quotes = double
per-file-ignores =
    tests/**.py:WPS218,WPS432,WPS442,S101
    {{cookiecutter.src_dir}}/{{cookiecutter.package_name}}/version.py:WPS410

[isort]
combine_as_imports = True
force_grid_wrap = 0
force_single_line = True
force_sort_within_sections = True
include_trailing_comma = True
lexicographical = True
line_length = 120
multi_line_output = 3
single_line_exclusions = typing
src_paths = {{cookiecutter.src_dir}},tests

[mypy]
allow_redefinition = False
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
